// Copyright (C) 2011 Google, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//         http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

// option cc_api_version = 2;
// option py_api_version = 1;

option java_package = "org.onebusaway.alerts.service";
package org_onebusaway_alerts_service;

message ServiceAlertsCollection {
  repeated ServiceAlert serviceAlerts = 1;
}

message ServiceAlert {
  
  required Id id = 1;  
  
  required uint64 creationTime = 2;
  
  required uint64 modifiedTime = 3;
  	
  repeated TimeRange activeWindow = 4;
  
  repeated TimeRange publicationWindow = 5;

  optional TranslatedString summary = 6;

  optional TranslatedString description = 7;


  enum Cause {
    UNKNOWN_CAUSE = 1;
    OTHER_CAUSE = 2;        // Not machine-representable.
    TECHNICAL_PROBLEM = 3;
    STRIKE = 4;             // Public transit agency employees stopped working.
    DEMONSTRATION = 5;      // People are blocking the streets.
    ACCIDENT = 6;
    HOLIDAY = 7;
    WEATHER = 8;
    MAINTENANCE = 9;
    CONSTRUCTION = 10;
    POLICE_ACTIVITY = 11;
    MEDICAL_EMERGENCY = 12;
  }
  optional Cause cause = 8 [default = UNKNOWN_CAUSE];
  
  repeated Affects affects = 9;
  
  repeated Consequence consequence = 10;
  
  enum Severity {
    NO_IMPACT = 1;
    UNKNOWN = 2;
    VERY_SLIGHT = 3;
    SLIGHT = 4;
    NORMAL = 5;
    SEVERE = 6;
    VERY_SEVERE = 7;
  }
  optional Severity severity = 11;
  
  optional TranslatedString url = 12;

  optional string source = 13;
}


message Affects {
  optional string agencyId = 1;
  optional Id routeId = 2;
  optional string directionId = 3;
  optional Id tripId = 4;
  optional Id stopId = 5;
  optional string applicationId = 6;
}

message Consequence {
  enum Effect {
	NO_SERVICE = 1;
    REDUCED_SERVICE = 2;
    SIGNIFICANT_DELAYS = 3;
    DETOUR = 4;
    ADDITIONAL_SERVICE = 5;
    MODIFIED_SERVICE = 6;
    OTHER_EFFECT = 7;
    UNKNOWN_EFFECT = 8;
    STOP_MOVED = 9;
  }
  optional Effect effect = 1;
  
  optional string detourPath = 2;

  repeated Id detourStopIds = 3;
}

message Id {
  required string agencyId = 1;
  
  required string id = 2;
}

message TimeRange {
  optional uint64 start = 1;

  optional uint64 end = 2;
}

message TranslatedString {
  message Translation {
    required string text = 1;
    optional string language = 2;
  }
  repeated Translation translation = 1;
}

